# vcflib

./: .gitignore  .gitmodules  CMakeLists.txt
src/: BedReader.h  CMakeLists.txt  Variant.cpp  Variant.h  split.h  vcf2dag.cpp  vcfcheck.cpp
tests/: CMakeLists.txt  example.vcf  reference.fa  reference.fa.fai  tests.cpp
utilities/: FindSeqAn.cmake  Findhtslib.cmake
